<resources>
    <string name="app_name">Books Catalogue</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_text_title">Title :</string>>
    <string name="add_text_author">Author :</string>>
    <string name="add_text_publisher">Publisher :</string>>
    <string name="add_text_year">Year :</string>>
    <string name="add_text_pages">Pages :</string>>
    <string name="add_text_price">Price :</string>>
    <string name="add_text_binding">Binding :</string>>
</resources>