<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_text_title"
                    android:textSize="24sp"
                    tools:text="Title :" />

                <EditText
                    android:id="@+id/edit_add_title"
                    android:layout_width="match_parent"
                    android:layout_height="89dp"
                    android:ems="10"
                    android:hint="title"
                    android:inputType="text"
                    android:text="title"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_text_author"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/edit_add_author"
                    android:layout_width="match_parent"
                    android:layout_height="89dp"
                    android:ems="10"
                    android:hint="author"
                    android:inputType="textPersonName"
                    android:text="author"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_text_publisher"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/edit_add_publisher"
                    android:layout_width="match_parent"
                    android:layout_height="89dp"
                    android:ems="10"
                    android:hint="publisher"
                    android:inputType="textPersonName"
                    android:text="pubclish2"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_text_year"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/edit_add_year"
                    android:layout_width="match_parent"
                    android:layout_height="89dp"
                    android:ems="10"
                    android:hint="year(dd)"
                    android:inputType="textPersonName"
                    android:text="2132"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_text_pages"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/edit_add_pages"
                    android:layout_width="match_parent"
                    android:layout_height="89dp"
                    android:ems="10"
                    android:hint="pages"
                    android:inputType="textPersonName"
                    android:text="89"
                    android:textSize="24sp" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_text_price"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/edit_add_price"
                    android:layout_width="match_parent"
                    android:layout_height="89dp"
                    android:ems="10"
                    android:hint="price"
                    android:inputType="textPersonName"
                    android:text="89.89"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_text_binding"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/edit_add_binding"
                    android:layout_width="match_parent"
                    android:layout_height="89dp"
                    android:ems="10"
                    android:hint="binding"
                    android:inputType="textPersonName"
                    android:text="bind"
                    android:textSize="24sp" />

            </LinearLayout>

            <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="34sp"

            <EditText
                android:id="@+id/edit_add_author"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="edit_add"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                tools:text="Publisher :" />

            <EditText
                android:id="@+id/edit_add_publisher"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="edit_add"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                tools:text="Year :" />

            <EditText
                android:id="@+id/edit_add_year"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="edit_add"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                tools:text="Page :" />

            <EditText
                android:id="@+id/edit_add_pages"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="edit_add"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                tools:text="Price :" />

            <EditText
                android:id="@+id/edit_add_price"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="edit_add"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                tools:text="Binding :" />

            <EditText
                android:id="@+id/edit_add_binding"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="edit_add"
                android:textSize="24sp" />

        </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:textAlignment="center">

                <Button
                    android:id="@+id/button_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="Add" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>